Fix image paths and clean up HTML structure

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
   <!-- Images section -->
   <div class="images-section">
 <div class="images-section">
-  <img src="images/flower2.jpg" alt="Flower 1" width="300" />
-  <img src="images/flower3.jfif" alt="Flower 2" width="300" />
+  <img src="flower2.jpg" alt="Flower 1" width="300" />
+  <img src="flower3.jfif" alt="Flower 2" width="300" />
 </div>
-  <img src="images/park-3.jpg" alt="Cherry Blossom" width="300" />
-  <img src="images/Japanese-Style1.jpg" alt="Park" width="300" />
+  <img src="park-3.jpg" alt="Cherry Blossom" width="300" />
+  <img src="Japanese-Style1.jpg" alt="Park" width="300" />
 
   <!-- Additional images -->
-  <img src="images/park4.jpg" alt="Park 4" width="300" />
-  <img src="images/pk2.jfif" alt="Flower 1" width="300" />
-  <img src="images/pk3.jpg" alt="Flower 2" width="300" />
+  <img src="park4.jpg" alt="Park 4" width="300" />
+  <img src="pk2.jfif" alt="Flower 1" width="300" />
+  <img src="pk3.jpg" alt="Flower 2" width="300" />
 </div>
 
 <!-- Corrected images section -->
-<img src="images/park4.jpg" alt="Park 4" width="300" />
-<img src="images/Umikido1.jpeg" alt="Flower 1" width="300" />
-<img src="images/Japanese-Style1.jpg" alt="Flower 2" width="300" />
+<img src="park4.jpg" alt="Park 4" width="300" />
+<img src="Umikido1.jpeg" alt="Flower 1" width="300" />
+<img src="Japanese-Style1.jpg" alt="Flower 2" width="300" />
     
     </body>
     <footer>
@@ -49,3 +49,4 @@
 
     </footer>
 </html>
+
